WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125750
WebKit2 View Gestures: Pinching beyond the extremes doesn't animate back to the min/max
https://bugs.webkit.org/show_bug.cgi?id=125750
Summary
WebKit2 View Gestures: Pinching beyond the extremes doesn't animate back to t...
Tim Horton
Reported
2013-12-14 20:11:22 PST
When you let go of a pinch where you exceeded the maximum or minimum scale, the view should animate back to the limit instead of snapping back.
Attachments
patch
(15.81 KB, patch)
2013-12-15 04:53 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
patch
(15.80 KB, patch)
2013-12-15 23:23 PST
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-12-15 04:53:41 PST
Created
attachment 219276
[details]
patch this may not apply because I have it on top of
https://bugs.webkit.org/show_bug.cgi?id=125751
in my tree
Tim Horton
Comment 2
2013-12-15 04:54:18 PST
***
Bug 125751
has been marked as a duplicate of this bug. ***
Tim Horton
Comment 3
2013-12-15 23:23:06 PST
Created
attachment 219297
[details]
patch
Simon Fraser (smfr)
Comment 4
2013-12-16 10:33:42 PST
Comment on
attachment 219297
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=219297&action=review
> Source/WebKit2/WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:758 > + // scrolling doesn't make the view jump; this is borrowed from ScrollableArea.
borrowed -> copied. Can we share code?
Tim Horton
Comment 5
2013-12-16 18:25:33 PST
http://trac.webkit.org/changeset/160685
and
http://trac.webkit.org/changeset/160686
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug